# Thesis

./: CMakeLists.txt  HashTable.h  ObjectPool.cpp  ObjectPool.h  README.md  main.cpp  plot_components.gnuplot  plot_latency.gnuplot  plot_sliding.gnuplot  plot_tumbling.gnuplot  run-all-configurations.sh  run-baseline.sh  run-batch-size.sh  run-sliding-configurations.sh  run-tumbling-configurations.sh  run.sh
baseline/: HashTable.h  main.cpp
datasets/: smartgrid-data.txt
inputgen/: inputgen.cpp
src/: AbstractNodeCoordinator.h  DefaultTableProvider.h  DelayedResultMerger.h  DirectResultMerger.h  EagerResultMerger.h  Executor.cpp  Executor.h  HashFunctions.cpp  HashFunctions.h  HashTable.h  HashTablePool.h  Job.cpp  Job.h  LatencyMonitor.cpp  LatencyMonitor.h  NodeComm.cpp  NodeComm.h  NodeCoordinator.cpp  NodeCoordinator.h  NumaAlloc.h  ObjectPool.h  QueryTask.cpp  QueryTask.h  ResultGroup.cpp  ResultGroup.h  Semaphore.h  Setting.cpp  Setting.h  SlidingWindowHandler.h  TaskResult.cpp  TaskResult.h  ThreadClockWindowMarker.h  ThreadCountWindowMarker.h  YahooQuery.cpp  YahooQuery.h  main.cpp  runner.cpp
src/queries/: SmartGrid2.cpp  SmartGrid2.h  YahooQuery.cpp  YahooQuery.h
